--- a/clients.html
+++ b/clients.html
@@ -3,42 +3,46 @@ layout: app
 title: Clients
 ---
 
-<div class="page-header clearfix">
-  <h1 class="pull-left"><div class="icon-large icon-users"></div> Clients</h1>
-  <a class="btn btn-success pull-right" href="add-client.html">
-    <span class="glyphicon glyphicon-plus-sign"></span>
-    Add a new client
-  </a>
+<div class="page-header-custom clearfix">
+  <div class="container">
+    <h1 class="pull-left"><div class="icon-large icon-users"></div> Clients</h1>
+    <a class="btn btn-success pull-right" href="add-client.html">
+      <span class="glyphicon glyphicon-plus-sign"></span>
+      Add a new client
+    </a>
+  </div>
 </div>
 
-<div class="table-responsive">
-  <table class="table table-striped table-condensed table-responsive table-sortable">
-    <thead>
-      <tr>
-        <th class="sortable"><a href="#">Company</a></th>
-        <th class="sortable"><a href="#">Address</a></th>
-        <th class="sortable sorted-asc">
-          <a href="#" title="Sorted ascending">
-            Contact name <span class="sort-indicator"><b class="caret"></b><b class="caret flipped"></b></span>
-          </a>
-        </th>
-        <th class="sortable"><a href="#">Contact e-mail</a></th>
-        <th></th>
-      </tr>
-    </thead>
-    <tbody>
-      {% for client in site.data.clients %}
-      <tr>
-        <td><a href="edit-client.html">{{client.company}}</td>
-        <td>{{client.address}}</td>
-        <td>{{client.name}}</td>
-        <td>{{client.email}}</td>
-        <td>
-          <a href="edit-client.html" class="btn btn-default btn-xs">Edit</a>
-          <a href="edit-client.html" class="btn btn-default btn-xs">Delete</a>
-        </td>
-      </tr>
-      {% endfor %}
-    </tbody>
-  </table>
-</div><!-- end responsive table -->
+<div class="container">
+  <div class="table-responsive">
+    <table class="table table-striped table-condensed table-responsive table-sortable">
+      <thead>
+        <tr>
+          <th class="sortable"><a href="#">Company</a></th>
+          <th class="sortable"><a href="#">Address</a></th>
+          <th class="sortable sorted-asc">
+            <a href="#" title="Sorted ascending">
+              Contact name <span class="sort-indicator"><b class="caret"></b><b class="caret flipped"></b></span>
+            </a>
+          </th>
+          <th class="sortable"><a href="#">Contact e-mail</a></th>
+          <th></th>
+        </tr>
+      </thead>
+      <tbody>
+        {% for client in site.data.clients %}
+        <tr>
+          <td><a href="edit-client.html">{{client.company}}</td>
+          <td>{{client.address}}</td>
+          <td>{{client.name}}</td>
+          <td>{{client.email}}</td>
+          <td>
+            <a href="edit-client.html" class="btn btn-default btn-xs">Edit</a>
+            <a href="edit-client.html" class="btn btn-default btn-xs">Delete</a>
+          </td>
+        </tr>
+        {% endfor %}
+      </tbody>
+    </table>
+  </div><!-- end responsive table -->
+</div>
