--- a/user-settings.html
+++ b/user-settings.html
@@ -3,81 +3,87 @@ layout: app
 title: User settings
 ---
 
-<div class="page-header">
-  <h1><div class="icon-large icon-settings"></div> User settings</h1>
+<div class="page-header-custom">
+  <div class="container">
+    <h1><div class="icon-large icon-settings"></div> User settings</h1>
+  </div>
 </div>
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Your password</h3>
-  </div>
-  <div class="panel-body">
-    <form class="form-horizontal" role="form">
+<div class="container">
 
-      <div class="form-group">
-        <label for="userPass" class="col-sm-2 control-label">Current password</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="password" id="userPass">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Your password</h3>
+    </div>
+    <div class="panel-body">
+      <form class="form-horizontal" role="form">
+
+        <div class="form-group">
+          <label for="userPass" class="col-sm-2 control-label">Current password</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="password" id="userPass">
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label for="userPassNew" class="col-sm-2 control-label">New password</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="password" id="userPassNew">
+        <div class="form-group">
+          <label for="userPassNew" class="col-sm-2 control-label">New password</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="password" id="userPassNew">
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label for="userPassNewRepeat" class="col-sm-2 control-label">Repeat new password</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="password" id="userPassNewRepeat">
+        <div class="form-group">
+          <label for="userPassNewRepeat" class="col-sm-2 control-label">Repeat new password</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="password" id="userPassNewRepeat">
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Save</button>
+        <div class="form-group">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-default">Save</button>
+          </div>
         </div>
-      </div>
 
-    </form>
+      </form>
 
-  </div> <!-- end panel body -->
-</div> <!-- end panel -->
+    </div> <!-- end panel body -->
+  </div> <!-- end panel -->
 
 
-<div class="panel panel-default">
-  <div class="panel-heading">
-    <h3 class="panel-title">Basic info</h3>
-  </div>
-  <div class="panel-body">
-    <form class="form-horizontal" role="form">
+  <div class="panel panel-default">
+    <div class="panel-heading">
+      <h3 class="panel-title">Basic info</h3>
+    </div>
+    <div class="panel-body">
+      <form class="form-horizontal" role="form">
 
-      <div class="form-group">
-        <label for="userName" class="col-sm-2 control-label">E-mail</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="email" id="userName" value="john.doe@mail.com">
+        <div class="form-group">
+          <label for="userName" class="col-sm-2 control-label">E-mail</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="email" id="userName" value="john.doe@mail.com">
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <label for="userName" class="col-sm-2 control-label">Display name</label>
-        <div class="col-sm-10">
-          <input class="form-control" type="text" id="userName" value="john.doe">
-          <p class="help-block">The name used throughout the app to identify you.</p>
+        <div class="form-group">
+          <label for="userName" class="col-sm-2 control-label">Display name</label>
+          <div class="col-sm-10">
+            <input class="form-control" type="text" id="userName" value="john.doe">
+            <p class="help-block">The name used throughout the app to identify you.</p>
+          </div>
         </div>
-      </div>
 
-      <div class="form-group">
-        <div class="col-sm-2"></div>
-        <div class="col-sm-10">
-          <button type="submit" class="btn btn-default">Save</button>
+        <div class="form-group">
+          <div class="col-sm-2"></div>
+          <div class="col-sm-10">
+            <button type="submit" class="btn btn-default">Save</button>
+          </div>
         </div>
-      </div>
 
-    </form>
+      </form>
 
-  </div> <!-- end panel body -->
-</div> <!-- end panel -->
+    </div> <!-- end panel body -->
+  </div> <!-- end panel -->
+
+</div>
