Implement grunt icon flow

--- a/invoices.html
+++ b/invoices.html
@@ -5,7 +5,7 @@ title: Invoices
 
 <div class="page-header-custom clearfix">
   <div class="container">
-    <h1 class="pull-left"><div class="icon-large icon-invoices"></div> Your invoices</h1>
+    <h1 class="pull-left"><div class="icon-large icon-invoices-i"></div> Your invoices</h1>
     <div class="btn-toolbar pull-right">
       <a href="#" class="btn btn-default"> Filters <b class="caret"></b></a>
       <a href="/add-invoice.html" class="btn btn-success"><span class="glyphicon glyphicon-plus-sign"></span> Add invoice</a>
