--- a/stats.html
+++ b/stats.html
@@ -5,7 +5,7 @@ title: Statistics
 
 <div class="page-header-custom clearfix">
   <div class="container">
-    <h1 class="pull-left"><div class="icon-large icon-stats"></div> Statistics</h1>
+    <h1 class="pull-left"><div class="icon-large icon-stats-i"></div> Statistics</h1>
     <div class="form-inline pull-right">
       <label>
         Current time period
