--- a/app-settings.html
+++ b/app-settings.html
@@ -5,7 +5,7 @@ title: Settings
 
 <div class="page-header-custom">
   <div class="container">
-    <h1><div class="icon-large icon-settings"></div> Settings</h1>
+    <h1><div class="icon-large icon-settings-i"></div> Settings</h1>
   </div>
 </div>
 
