Improve the design implementation - more detail implementation

--- a/add-invoice.html
+++ b/add-invoice.html
@@ -6,18 +6,17 @@ state: add-invoice
 
 <div class="page-header-custom clearfix">
   <div class="container">
-    <h1 class="pull-left"><div class="icon-large icon-invoices"></div> Add invoice</h1>
+    <h1 class="pull-left">
+      <div class="icon-large icon-invoices-i"></div>
+      Add invoice
+    </h1>
     <div class="form-inline pull-right">
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" checked>
-          Use standard rate
+      <div class="form-group">
+        <label class="checkbox-inline">
+          <input type="checkbox" checked> Use standard rate
         </label>
-      </div>
-      <div class="checkbox">
-        <label>
-          <input type="checkbox" checked>
-          Use default payment terms
+        <label class="checkbox-inline">
+          <input type="checkbox" checked> Use default payment terms
         </label>
       </div>
     </div>
