--- a/stats.html
+++ b/stats.html
@@ -10,13 +10,15 @@ title: Statistics
       <label>
         Current time period
       </label>
-      <select class="form-control">
-        <option selected="true">2014</option>
-        <option>2013</option>
-        <option>2012</option>
-        <option>All</option>
-        <option>Custom…</option>
-      </select>
+      <div class="select-custom">
+        <select class="form-control">
+          <option selected="true">2014</option>
+          <option>2013</option>
+          <option>2012</option>
+          <option>All</option>
+          <option>Custom…</option>
+        </select>
+      </div>
     </div>
   </div>
 </div>
