--- a/user-settings.html
+++ b/user-settings.html
@@ -5,7 +5,7 @@ title: User settings
 
 <div class="page-header-custom">
   <div class="container">
-    <h1><div class="icon-large icon-settings"></div> User settings</h1>
+    <h1><div class="icon-large icon-settings-i"></div> User settings</h1>
   </div>
 </div>
 
