--- a/clients.html
+++ b/clients.html
@@ -5,7 +5,7 @@ title: Clients
 
 <div class="page-header-custom clearfix">
   <div class="container">
-    <h1 class="pull-left"><div class="icon-large icon-users"></div> Clients</h1>
+    <h1 class="pull-left"><div class="icon-large icon-users-i"></div> Clients</h1>
     <a class="btn btn-success pull-right" href="add-client.html">
       <span class="glyphicon glyphicon-plus-sign"></span>
       Add a new client
