--- a/edit-client.html
+++ b/edit-client.html
@@ -4,24 +4,30 @@ title: Edit client
 state: edit
 ---
 
-<div class="page-header clearfix">
-  <h1><span class="glyphicon glyphicon-user"></span> Add Client</h1>
-</div>
-
-<div class="panel panel-default">
-  <div class="panel-body">
-    {% include forms/forms-add-client.html %}
+<div class="page-header-custom clearfix">
+  <div class="container">
+    <h1><span class="glyphicon glyphicon-user"></span> Add Client</h1>
   </div>
 </div>
 
+<div class="container">
 
-<div class="panel panel-default">
-  <div class="panel-body">
-    <a href="/clients.html" class="btn pull-left">Cancel</a>
-
-    <div class="btn-toolbar pull-right" role="toolbar">
-      <a href="/clients.html" class="btn btn-success">Save</a>
+  <div class="panel panel-default">
+    <div class="panel-body">
+      {% include forms/forms-add-client.html %}
     </div>
-
   </div>
-</div> <!-- end panel -->
+
+
+  <div class="panel panel-default panel-minimal">
+    <div class="panel-body">
+      <a href="/clients.html" class="btn pull-left">Cancel</a>
+
+      <div class="btn-toolbar pull-right" role="toolbar">
+        <a href="/clients.html" class="btn btn-success">Save</a>
+      </div>
+
+    </div>
+  </div> <!-- end panel -->
+
+</div>
