--- a/edit-invoice.html
+++ b/edit-invoice.html
@@ -4,8 +4,8 @@ title: Editing invoice 'Aztec Inc. Sales Prototype'
 state: edit
 ---
 
-<div class="page-header clearfix">
-  <h1 class="pull-left"><div class="icon-large icon-settings"></div> Edit invoice 'Aztec Inc. Sales Prototype'</h1>
+<div class="page-header-custom clearfix">
+  <h1 class="pull-left"><div class="icon-large icon-invoices-i"></div> Edit invoice 'Aztec Inc. Sales Prototype'</h1>
   <div class="pull-right">
     <div class="form-inline">
       <div class="checkbox">
@@ -23,7 +23,6 @@ state: edit
     </div>
   </div>
 </div>
-
 
 {% include forms/invoice-to.html %}
 {% include forms/invoice-content.html %}
