Improvements to style/better implementation of summary/better globalnav

--- a/invoices.html
+++ b/invoices.html
@@ -58,14 +58,6 @@ title: Invoices
   </div>
 </div>
 
-<div class="summary hide" data-toggle="full-summary">
-  <h4>Summary</h4>
-  <p>Outstanding</p>
-  <h2 class="m0">€2400,00</h2>
-  <p>Paid since 01/01/2014</p>
-  <h2 class="m0">€5845,00</h2>
-</div>
-
 <div class="container">
 
   <div class="panel panel-default panel-minimal">
@@ -192,5 +184,21 @@ title: Invoices
         <li><a href="#">&raquo;</a></li>
       </ul>
     </div>
+  </div>
+</div>
+
+<div class="summary hide" data-toggle="full-summary" data-hide="this-summary">
+  <button type="button" class="close" aria-hidden="true" data-hide="this-summary">&times;</button>
+  
+  <h4>Summary</h4>
+  <p>Outstanding</p>
+  <div class="account-numbers clearfix">
+      <span class="account-numbers-currency">€</span>
+      <span class="account-numbers-value">2400,00</span>
+  </div>
+  <p>Paid since 01/01/2014</p>
+  <div class="account-numbers clearfix">
+      <span class="account-numbers-currency">€</span>
+      <span class="account-numbers-value">5845,00</span>
   </div>
 </div>
