--- a/invoices.html
+++ b/invoices.html
@@ -84,9 +84,9 @@ title: Invoices
           </tr>
         </thead>
         <tbody>
-          {% for num in (1..5) %}
+          {% for client in site.data.clients limit:5 %}
           <tr>
-            <td><a href="edit-invoice.html">Client name</td>
+            <td><a href="edit-invoice.html">{{ client.name }}</td>
             <td>{% cycle '221', '220', '219', '218' %}</td>
             <td>
               {% cycle '<span class="label label-info">Not paid</span>', '<span class="label label-danger">Late</span>' %}
@@ -142,9 +142,9 @@ title: Invoices
           </tr>
         </thead>
         <tbody>
-          {% for num in (1..10) %}
+          {% for client in site.data.clients limit:10 %}
           <tr>
-            <td><a href="edit-invoice.html">Client name</td>
+            <td><a href="edit-invoice.html">{{ client.name }}</td>
             <td>{% cycle '217', '216', '215', '214', '213', '212', '211', '210', '209', '208' %}</td>
             <td><span class="label label-success">Paid</span></td>
             <td>€1210</td>
