--- a/edit-client.html
+++ b/edit-client.html
@@ -6,7 +6,7 @@ state: edit
 
 <div class="page-header-custom clearfix">
   <div class="container">
-    <h1><span class="glyphicon glyphicon-user"></span> Add Client</h1>
+    <h1><span class="glyphicon glyphicon-user"></span> Edit client</h1>
   </div>
 </div>
 
@@ -17,7 +17,6 @@ state: edit
       {% include forms/forms-add-client.html %}
     </div>
   </div>
-
 
   <div class="panel panel-default panel-minimal">
     <div class="panel-body">
