Delete the relevant part for stats to prepare for exercise tag

--- a/stats.html
+++ b/stats.html
@@ -25,27 +25,6 @@ title: Statistics
 
 <div class="container">
 
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Revenue month over month</h3>
-    </div>
-    <div class="panel-body">
-      <div id="chart-revenue-month-over-month" class="chart">
-        <svg></svg>
-      </div>
-    </div>
-  </div><!-- end panel -->
-
-
-  <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Income by client</h3>
-    </div>
-    <div class="panel-body">
-      <div id="chart-income-by-client" class="chart">
-        <svg></svg>
-      </div>
-    </div>
-  </div><!-- end panel -->
-
+  <!-- Put the stats HTML here -->
+  
 </div>
