Revert "Delete files to prepare for state loader exercise"
This reverts commit bc9643c6fa64881cf00107777770edc0e886bff5.

--- a/app-settings.html
+++ b/app-settings.html
@@ -44,7 +44,7 @@ title: Settings
         <div class="form-group">
           <div class="col-sm-2"></div>
           <div class="col-sm-10">
-            <a class="btn btn-default">Save</a>
+            <a data-state-push='{ popmessages: "states/pop-success.html" }' class="btn btn-default">Save</a>
           </div>
         </div>
 
